gradle-m10.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.12/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :createMinecraftArtifacts UP-TO-DATE

> Task :compileJava
E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:255: error: local variables referenced from a lambda expression must be final or effectively final
               this.itemsContains.removeIf(entryx -> !entryx.searchKey.contains(search));
                                                                                ^
E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:257: error: local variables referenced from a lambda expression must be final or effectively final
                  if (entryx.searchKey.startsWith(search)) {
                                                  ^
E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:260: error: local variables referenced from a lambda expression must be final or effectively final
                     if (entryx.searchKey.contains(search)) {
                                                   ^
E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\neoforge\AxiomClientBusEvents.java:15: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = AxiomNeoForge.MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                                       ^
E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\neoforge\AxiomClientBusEvents.java:15: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
@EventBusSubscriber(modid = AxiomNeoForge.MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                                                               ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
2 warnings

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///E:/Projects/Axiom-port/axiom-neoforge/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.Note: Recompile with -Xlint:unchecked for details.E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:255: error: local variables referenced from a lambda expression must be final or effectively final
                 this.itemsContains.removeIf(entryx -> !entryx.searchKey.contains(search));
                                                                                  ^
  E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:257: error: local variables referenced from a lambda expression must be final or effectively final
                    if (entryx.searchKey.startsWith(search)) {
                                                    ^
  E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\displayentity\ItemList.java:260: error: local variables referenced from a lambda expression must be final or effectively final
                       if (entryx.searchKey.contains(search)) {
                                                     ^Note: Some input files use unchecked or unsafe operations.E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\neoforge\AxiomClientBusEvents.java:15: warning: [removal] bus() in EventBusSubscriber has been deprecated and marked for removal
  @EventBusSubscriber(modid = AxiomNeoForge.MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                                         ^
  E:\Projects\Axiom-port\axiom-neoforge\src\main\java\com\moulberry\axiom\neoforge\AxiomClientBusEvents.java:15: warning: [removal] Bus in EventBusSubscriber has been deprecated and marked for removal
  @EventBusSubscriber(modid = AxiomNeoForge.MOD_ID, value = Dist.CLIENT, bus = EventBusSubscriber.Bus.MOD)
                                                                                                 ^Note: Some input files use or override a deprecated API.
  3 errors
  2 warnings

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 15s
2 actionable tasks: 1 executed, 1 up-to-date
